# hearforspeech-server

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  PR_DESCRIPTION.md  README.md  fly.toml  pyproject.toml
.github/workflows/: fly-deploy.yml
docs/: api.md  app-integration.md  architecture.md  self-hosting.md
src/hearforspeech_server/: main.py  schemas.py  settings.py
src/hearforspeech_server/analysis/: __init__.py  audio_io.py  calibration.py  parselmouth_metrics.py  pipeline.py  speech_sound_patterns.py  wav_metrics.py
tests/: test_api.py
