[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "hearforspeech-server"
version = "0.1.0"
description = "Optional FastAPI analysis backend for HearForSpeech"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "HearForSpeech contributors" }
]
dependencies = [
  "fastapi>=0.124,<1.0",
  "pydantic>=2.12,<3.0",
  "python-multipart>=0.0.20",
  "uvicorn[standard]>=0.38,<1.0"
]

[project.optional-dependencies]
analysis = [
  "numpy>=2.0,<3.0",
  "praat-parselmouth>=0.4.6,<0.5"
]
dev = [
  "httpx>=0.28,<1.0",
  "pytest>=9.0,<10.0",
  "ruff>=0.14,<1.0"
]

[tool.hatch.build.targets.wheel]
packages = ["src/hearforspeech_server"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
